--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background: rgb(116,8,8);
-    background: radial-gradient(circle, rgba(116,8,8,1) 0%, rgba(63,67,70,1) 100%);
+    background: radial-gradient(circle, rgb(160, 147, 147) 0%, rgba(63,67,70,1) 100%);
 }
 #startScreen {
     display: none;
